--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
     envVars:
       - key: REDASH_DATABASE_URL
         fromDatabase:
-          name: redash
+          name: redash-db
           property: connectionString
       - key: REDIS_HOSTPORT
         fromService:
@@ -35,7 +35,7 @@ services:
     envVars:
       - key: REDASH_DATABASE_URL
         fromDatabase:
-          name: redash
+          name: redash-db
           property: connectionString
       - key: REDIS_HOSTPORT
         fromService:
@@ -59,7 +59,7 @@ services:
     envVars:
       - key: REDASH_DATABASE_URL
         fromDatabase:
-          name: redash
+          name: redash-db
           property: connectionString
       - key: REDIS_HOSTPORT
         fromService:
